force-app/main/default/objects/MUSW__Resource__c/MUSW__Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>