force-app/main/default/objects/MUSW__Resource__c/fields/MUSW__External__c.field-meta.xml
<CustomField>
    <fullName>MUSW__External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>