force-app/main/default/objects/MUSW__Resource__c/fields/MUSW__Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Last_Assigned__c</fullName>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>