force-app/main/default/objects/MUSW__Resource__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__First_Name__c</columns>
    <columns>MUSW__Last_Name__c</columns>
    <columns>MUSW__Last_Assigned__c</columns>
    <columns>MUSW__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>